--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+* {
+    font-family: 'Dosis', sans-serif;
+}
+
 .bg-grey {
     background-color: #f7f8f9;
 }
@@ -366,7 +371,7 @@ p {
 
 .go-top {
     position: fixed;
-    z-index: 1000; /* Garantir que fica acima de tudo durante a descida */
+    z-index: 1000; 
     bottom: 20px; 
     right: 20px;
     width: 45px;
@@ -380,12 +385,12 @@ p {
     justify-content: center;
     overflow: hidden;
    
-    /* ESTADO INICIAL: Lá no topo (escondido atrás ou acima do header) */
+    
     opacity: 0;
     visibility: hidden;
-    transform: translateY(-100vh); /* Faz com que ele caia lá de cima */
+    transform: translateY(-100vh); 
     
-    /* Transição mais lenta para vermos a "viagem" do botão */
+    
     transition: transform 1.2s cubic-bezier(0.22, 1, 0.36, 1), opacity 0.5s ease;
     box-shadow: 0 4px 15px rgba(123, 104, 238, 0.3);
 }
@@ -393,10 +398,10 @@ p {
 .go-top.active {
     opacity: 1;
     visibility: visible;
-    transform: translateY(0); /* Chega ao destino final (bottom: 20px) */
+    transform: translateY(0); 
 }
 
-/* --- Efeito Cascata das Setas no Hover --- */
+
 .go-top i {
     position: absolute;
     transition: 0.4s;
@@ -409,7 +414,7 @@ p {
 
 .go-top:hover {
     background-color: #ffb700;
-    transform: translateY(-5px); /* Pequeno pulo ao pairar */
+    transform: translateY(-5px);
 }
 
 .go-top:hover i:first-child {
